--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="open_drawers">Open drawer</string>
+    <string name="close_drawers">Close drawer</string>
     <string name="facebook_app_id">634999077107733</string>
     <string name="fb_login_protocol_scheme">fb634999077107733</string>
 
